# qfilt

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: filter.h  img.h  main.h
src/: filter.c  img.c  main.c
